--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="lebar">Lebar</string>
     <string name="tinggi">Tinggi</string>
     <string name="Hitung">Hitung</string>
+    <string name="hasil">Hasil</string>
 </resources>
